--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,3 +1,4 @@
+
 .example-form {
   min-width: 150px;
   max-width: 500px;
@@ -7,3 +8,13 @@
 .example-full-width {
   width: 100%;
 }
+
+.example-mid-width {
+  width: 45%;
+  margin-right: 20px;
+}
+
+.espacio{
+  padding: 30px;
+}
+
