--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -9,8 +9,8 @@
 <div class="espacio"></div>
 
 <h3>Datos:</h3>
-<form class="example-form">
 
+<div class="example-form">
   <mat-form-field class="example-mid-width">
     <mat-label>Name</mat-label>
     <input type="text" matInput [formControl]="nameFormControl" [errorStateMatcher]="matcher" placeholder="Manuel">
@@ -51,7 +51,7 @@
 
   <mat-form-field class="example-full-width">
     <mat-label>Password</mat-label>
-    <input type="password" matInput [formControl]="passwordFormControl" [errorStateMatcher]="matcher"
+    <input type="password" matInput [formControl]="passwordFormControl" [errorStateMatcher]="matcher2"
       placeholder="12341234">
     <mat-hint>Al menos 8 caracteres</mat-hint>
     <mat-error *ngIf="passwordFormControl.hasError('password') && !passwordFormControl.hasError('required')">
@@ -63,18 +63,17 @@
   </mat-form-field>
 
   <label id="example-radio-group-label">Elige el nuevo Régimen político</label>
-  <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group">
+  <mat-radio-group aria-labelledby="example-radio-group-label"  class="example-radio-group" [(ngModel)]="regimenseleccionado">
     <mat-radio-button class="example-radio-button" *ngFor="let regimenes of regimenes" [value]="regimenes">
       {{regimenes}}
     </mat-radio-button>
   </mat-radio-group>
 
   <section class="example-section">
-    <mat-checkbox class="example-margin">Acepto las condidiones</mat-checkbox>
+    <mat-checkbox class="example-margin" [(ngModel)]="isChecked">Acepto las condidiones</mat-checkbox>
   </section>
 
-  <button mat-flat-button color="accent">Enviar</button>
+  <button  mat-flat-button color="accent"  (click)="enviarDatos()">Enviar</button>
     
 
-
-</form>
+</div>
